[gd_scene load_steps=6 format=3 uid="uid://c5c81xkd53fc8"]

[ext_resource type="Texture2D" uid="uid://c47247o3xgtw3" path="res://assets/flame_particle.png" id="1_cgarp"]
[ext_resource type="Script" path="res://candle_flame.gd" id="2_w2hep"]
[ext_resource type="Texture2D" uid="uid://bm4cabeud3bqs" path="res://assets/interaction-circle.png" id="3_xvelu"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6u0na"]
blend_mode = 1

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1gfnb"]
lifetime_randomness = 0.25
particle_flag_disable_z = true
angle_min = -10.0
angle_max = 10.0
direction = Vector3(0, -1, 0)
spread = 36.91
flatness = 0.011
initial_velocity_max = 100.0
gravity = Vector3(0, -100, 0)

[node name="CandleFlame" type="GPUParticles2D"]
process_mode = 3
y_sort_enabled = true
texture_filter = 4
material = SubResource("CanvasItemMaterial_6u0na")
process_material = SubResource("ParticleProcessMaterial_1gfnb")
texture = ExtResource("1_cgarp")
local_coords = true
draw_order = 2
script = ExtResource("2_w2hep")

[node name="Glow1" type="PointLight2D" parent="."]
color = Color(1, 0.584314, 0.360784, 1)
energy = 0.1
texture = ExtResource("3_xvelu")
texture_scale = 5.0

[node name="Glow2" type="PointLight2D" parent="."]
color = Color(1, 0.584314, 0.360784, 1)
energy = 0.1
texture = ExtResource("3_xvelu")
texture_scale = 4.0

[node name="Glow3" type="PointLight2D" parent="."]
color = Color(1, 0.584314, 0.360784, 1)
energy = 0.1
texture = ExtResource("3_xvelu")
texture_scale = 3.0

[node name="Glow4" type="PointLight2D" parent="."]
color = Color(1, 0.584314, 0.360784, 1)
energy = 0.1
texture = ExtResource("3_xvelu")
texture_scale = 2.0
